--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -38,20 +38,9 @@
             <artifactId>tracer-sofa-boot-starter</artifactId>
         </dependency>
 
-        <!-- HttpClient 依赖 -->
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpasyncclient</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alipay.sofa</groupId>
-            <artifactId>sofa-tracer-httpclient-plugin</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 </project>
